# crinemaft

./: CMakeLists.txt  README.md
.github/workflows/: linux.yml  macos.yml  windows.yml
scripts/: run.sh
src/: glinc.h  main.cpp  util.cpp  util.h
src/client/: glwrapper.cpp  glwrapper.h
src/shader/: block_frag.glsl  block_vert.glsl
